--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://snippet.infothroat.com/dist/api/lead-1.1.0.min.js"></script>
     <title>Artrolux+</title>
   </head>
   <body>
