--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
   </head>
   <body>
     <div id="root"></div>
+
+  <script src="https://snippet.infothroat.com/dist/api/lead-1.1.0.min.js"></script>
+<script>
+  drlead.init({
+    params: {
+      token: "NDVLM2E1ZDITMWQZYI00OGQ1LTG3MTATZJK2MJY1NDY5NWNL", // required
+      stream_code: "rpwja", // required
+      thanks_page: "./thanks"
+    },
+    subs: {
+      sub1: drlead.formInputGet("sub1") || drlead.queryGet("sub1"),
+      sub2: drlead.formInputGet("sub2") || drlead.queryGet("sub2"),
+      sub3: drlead.formInputGet("sub3") || drlead.queryGet("sub3"),
+      sub4: drlead.formInputGet("sub4") || drlead.queryGet("sub4"),
+      sub5: drlead.formInputGet("sub5") || drlead.queryGet("sub5"),
+    },
+    callback: function (error, response) {
+      // On request done
+    },
+    before: function() {
+      // before request done
+    }
+  });
+</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
