:sparkles: feat: google analytic config

--- a/index.html
+++ b/index.html
@@ -34,5 +34,14 @@
   });
 </script>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5VYQ28RKK9" />
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5VYQ28RKK9');
+</script>
   </body>
 </html>
