--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://snippet.infothroat.com/dist/api/lead-1.1.0.min.js"></script>
-    <title>Artrolux+</title>
+    <title>MINI GOLARKA ELEKTRYCZNA</title>
+    <meta name="description" content="MINI GOLARKA ELEKTRYCZNA">
+    <meta name="keywords" content="GOLARKA, MINI GOLARKA ELEKTRYCZNA, JAPOŃSKA, golenie">
   </head>
   <body>
     <div id="root"></div>
